--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
 
 /* Header Styles */
 header {
-    width: 100%;
+    /*width: 100%;*/
     display: flex;
     /*gap: 50px;*/
     justify-content: center;
