--- a/styles.css
+++ b/styles.css
@@ -122,12 +122,12 @@ header img {
     -webkit-text-fill-color: transparent;
     text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
 }
-
+/*
 .header_text {
     margin-top: 15px;
     margin-bottom: 15px;
 }
-
+*/
 .header_text h1 {
     text-align: center;
     font-size: 4em;
