--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ section {
     font-family: 'Poppins-Regular';
     color: white;
     /*padding: 0;*/
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     line-height: 1.5;
 }
 
