--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ header {
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
+    margin-bottom: 10px;
     margin: 0 15px;
 }
 
@@ -105,11 +106,11 @@ header {
 }*/
 
 header img {
-    max-height: 200px;
+    max-height: 150px;
     width: auto;
     border-radius: 50%;
     /*margin-left: 300px;*/
-    /*padding: 20px;*/
+    padding: 20px;
 }
 
 /*.header_items .header_text {
