--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ header {
 }*/
 
 header img {
-    max-height: 150px;
+    max-height: 200px;
     width: auto;
     border-radius: 50%;
     /*margin-left: 300px;*/
@@ -151,7 +151,7 @@ main {
     /*max-width: 900px;*/
     /*width: 100%;*/
     /*margin: 40px auto;*/
-    /*margin-top: 10px;*/
+    margin-top: 10px;
     margin-bottom: 20px;
     padding: 0 15px;
 }
