--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
     margin-top: 0;
     margin-bottom: 10px;
 }
-
+/*
 .menu_learn_more {
     color: rgb(0, 43, 200);
     font-size: 1em;
@@ -71,6 +71,25 @@ body {
     color: white;
     text-decoration: none;
     background-color: rgb(0, 43, 200);
+}
+*/
+
+.menu_learn_more {
+    color: white;
+    font-size: 1em;
+    font-family: 'Helvetica';
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #0a103b;
+    /*border-radius: 20px;
+    border: 1px solid rgb(0, 43, 200);*/
+}
+
+.menu_learn_more:hover {
+    color: #0a103b;
+    text-decoration: none;
+    background-color: white;
 }
 
 /*.section {
@@ -152,7 +171,7 @@ main {
     /*width: 100%;*/
     /*margin: 40px auto;*/
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     padding: 0 15px;
 }
 
@@ -183,7 +202,7 @@ section {
     /*opacity: 0.95;*/
     /*padding: 20px;*/
     /*margin-top: 20px;*/
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
