--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ body {
     color: #333;
     /*line-height: 1.6;*/
     /*padding: 0 15px;*/ /*comment this to remove white side box borders*/
-    padding-top: 50px;
 }
 
 .display2 {
@@ -57,6 +56,7 @@ body {
     justify-content: flex-end;
     margin-top: 0;
     margin-bottom: 10px;
+    padding-bottom: 30px;
 }
 /*
 .menu_learn_more {
