--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ body {
     justify-content: flex-end;
     margin-top: 0;
     margin-bottom: 10px;
-    padding-bottom: 30px;
 }
 /*
 .menu_learn_more {
@@ -119,6 +118,7 @@ header {
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
+    margin-top: 30px;
     margin-bottom: 10px;
     margin: 0 15px;
 }
