--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
     gap: 5px;
     justify-content: flex-end;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 /*
 .menu_learn_more {
@@ -118,7 +118,7 @@ header {
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
-    padding-top: 50px;
+    margin-top: 50px;
     margin-bottom: 10px;
     margin: 0 15px;
 }
