--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     color: #333;
     /*line-height: 1.6;*/
     /*padding: 0 15px;*/ /*comment this to remove white side box borders*/
-    padding-top: 50px;
+    padding-top: 45px;
 }
 
 .display2 {
@@ -56,7 +56,7 @@ body {
     gap: 5px;
     justify-content: flex-end;
     margin-top: 0;
-    margin-bottom: 50px;
+    /*margin-bottom: 50px;*/
     top: 0;
 }
 /*
@@ -120,7 +120,7 @@ header {
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     margin-bottom: 10px;
     margin: 0 15px;
 }
