--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
     position: fixed;
     width: 100%;
     z-index: 1000;
-    background: rgba(10, 16, 59, 0.8);
+    background: rgba(10, 16, 59, 0.95);
     display: flex;
     gap: 5px;
     justify-content: flex-end;
@@ -86,7 +86,7 @@ body {
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: #0a103b;
+    background-color: rgba(10, 16, 59, 0.95);
     /*border-radius: 20px;
     border: 1px solid rgb(0, 43, 200);*/
 }
