--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ body {
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: rgba(10, 16, 59, 0.95);
+    /*background-color: rgba(10, 16, 59, 0.95);*/
     /*border-radius: 20px;
     border: 1px solid rgb(0, 43, 200);*/
 }
