--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@
     padding-top: 48px;
 }
 
-body display2 {
+.main_page body display2 {
     position: fixed;
     width: 100%;
     z-index: 1000;
