--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
     src: url('fonts/Poppins/Poppins-LightItalic.ttf') format('truetype');
 }
 
-.main_page body {
+.main_page {
     /*font-family: 'Helvetica';*/
     background-color: white;
     color: #333;
@@ -48,7 +48,7 @@
     padding-top: 48px;
 }
 
-.main_page body display2 {
+.display2 {
     position: fixed;
     width: 100%;
     z-index: 1000;
