--- a/styles.css
+++ b/styles.css
@@ -433,14 +433,15 @@
 }
 
 .display2 {
-    position: fixed;
+    /*position: fixed;*/
     width: 100%;
     z-index: 1000;
-    background: rgba(10, 16, 59, 0.95);
+    /*background: rgba(10, 16, 59, 0.95);*/
+    background-color: white;
     display: flex;
     gap: 5px;
     justify-content: flex-end;
-    margin-top: 0;
+    /*margin-top: 0;*/
     /*margin-bottom: 50px;*/
     top: 0;
 }
@@ -535,12 +536,12 @@
 
 .about_me {
     /*display: flex;*/
-    /*background-color: white;*/
+    background-color: white;
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
-    background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);
+    /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
     /*padding: 20px;*/
     /*margin-top: 20px;*/
