--- a/styles.css
+++ b/styles.css
@@ -500,7 +500,7 @@
     flex: 1;
 }
 
-.about_me {
+.projects_category {
     /*display: flex;*/
     background-color: white;
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
@@ -519,7 +519,7 @@
     /*height: 100vh;*/
 }
 
-.about_me h2 {
+.projects_category h2 {
     font-size: 2.5em;
     text-align: center;
     font-family: 'Poppins-Regular';
