--- a/styles.css
+++ b/styles.css
@@ -496,6 +496,11 @@
     padding: 0 15px;
 }
 
+.display_projects_category {
+    display: flex;
+    gap: 20px;
+}
+
 .projects_page section {
     flex: 1;
 }
