--- a/styles.css
+++ b/styles.css
@@ -505,7 +505,7 @@
     flex: 1;
 }
 
-.projects_category {
+.left_box {
     /*display: flex;*/
     background-color: white;
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
@@ -524,7 +524,37 @@
     /*height: 100vh;*/
 }
 
-.projects_category h2 {
+.left_box h2 {
+    font-size: 2.5em;
+    text-align: center;
+    font-family: 'Poppins-Regular';
+    color: rgb(211, 211, 280);
+    /*padding: 0;*/
+    /*margin-top: 5px;*/
+    /*margin-bottom: 10px;*/
+    line-height: 0.2;
+}
+
+.right_box {
+    /*display: flex;*/
+    background-color: white;
+    /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
+    /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
+    /*background: rgb(245, 245, 245);*/
+    /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
+    /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
+    /*opacity: 0.95;*/
+    /*padding: 20px;*/
+    /*margin-top: 20px;*/
+    margin-bottom: 15px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*height: 100vh;*/
+}
+
+.right_box h2 {
     font-size: 2.5em;
     text-align: center;
     font-family: 'Poppins-Regular';
