--- a/styles.css
+++ b/styles.css
@@ -496,7 +496,7 @@
     padding: 0 15px;
 }
 
-.display_projects_category {
+.left_right_boxes {
     display: flex;
     gap: 20px;
 }
@@ -520,7 +520,7 @@
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
-    /*justify-content: center;*/
+    justify-content: center;
     /*height: 100vh;*/
 }
 
@@ -550,7 +550,7 @@
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
-    /*justify-content: center;*/
+    justify-content: center;
     /*height: 100vh;*/
 }
 
