--- a/styles.css
+++ b/styles.css
@@ -519,7 +519,7 @@
     margin-bottom: 15px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /*align-items: center;*/
+    align-items: center;
     justify-content: center;
     /*height: 100vh;*/
 }
@@ -549,7 +549,7 @@
     margin-bottom: 15px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /*align-items: center;*/
+    align-items: center;
     justify-content: center;
     /*height: 100vh;*/
 }
