--- a/styles.css
+++ b/styles.css
@@ -519,9 +519,10 @@
     margin-bottom: 15px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    align-items: center;
+    /*align-items: center;
     justify-content: center;
-    /*height: 100vh;*/
+    height: 100vh;*/
+    text-align: center;
 }
 
 .left_box h2 {
@@ -549,9 +550,10 @@
     margin-bottom: 15px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    align-items: center;
+    /*align-items: center;
     justify-content: center;
-    /*height: 100vh;*/
+    height: 100vh;*/
+    text-align: center;
 }
 
 .right_box h2 {
