--- a/styles.css
+++ b/styles.css
@@ -507,6 +507,7 @@
 
 .left_box {
     /*display: flex;*/
+    width: 30%;
     background-color: white;
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
@@ -538,6 +539,7 @@
 
 .right_box {
     /*display: flex;*/
+    width: 70%;
     background-color: white;
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
