--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
-    padding: 15px;
+    /*padding: 15px;*/
     /*margin-top: 20px;*/
     margin-bottom: 15px;
     border-radius: 12px;
@@ -533,7 +533,7 @@
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
-    /*margin-top: 5px;*/
+    margin-top: 15px;
     /*margin-bottom: 10px;*/
     line-height: 0.2;
 }
@@ -548,7 +548,7 @@
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
-    padding: 15px;
+    /*padding: 15px;*/
     /*margin-top: 20px;*/
     margin-bottom: 15px;
     border-radius: 12px;
@@ -565,7 +565,7 @@
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
-    /*margin-top: 5px;*/
+    margin-top: 15px;
     /*margin-bottom: 10px;*/
     line-height: 0.2;
 }
