--- a/styles.css
+++ b/styles.css
@@ -516,9 +516,9 @@
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
-    /*padding: 15px;*/
+    padding: 30px;
     /*margin-top: 20px;*/
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;
@@ -533,7 +533,7 @@
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
-    margin-top: 15px;
+    /*margin-top: 15px;*/
     /*margin-bottom: 10px;*/
     line-height: 0.2;
 }
@@ -548,9 +548,9 @@
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
-    /*padding: 15px;*/
+    padding: 30px;
     /*margin-top: 20px;*/
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;
@@ -565,7 +565,7 @@
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
-    margin-top: 15px;
+    /*margin-top: 15px;*/
     /*margin-bottom: 10px;*/
     line-height: 0.2;
 }
