--- a/styles.css
+++ b/styles.css
@@ -428,8 +428,8 @@
     color: #333;
     /*line-height: 1.6;*/
     /*padding: 0 15px;*/ /*comment this to remove white side box borders*/
-    padding-top: 30px;
-    margin-top: 15px;
+    /*padding-top: 30px;
+    margin-top: 15px;*/
 }
 
 .projects_page header {
@@ -451,8 +451,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
     /*margin-top: 50px;*/
-    margin-bottom: 10px;
-    margin: 0 15px;
+    /*margin-bottom: 10px;*/
+    margin: 0 15px 10px; /*top = 0; left/right = 15; bottom = 10*/
 }
 
 /*.header_items {
@@ -516,7 +516,7 @@
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
-    padding: 60px;
+    padding: 30px;
     /*margin-top: 20px;*/
     margin-bottom: 10px;
     border-radius: 12px;
