--- a/styles.css
+++ b/styles.css
@@ -442,17 +442,17 @@
     /*background-image: url('images/header_image.jpg');*/
     background-size: cover;
     background-position: center;
-    height: 200px;
+    /*height: 200px;*/
     color: white;
     align-items: center;
     /*padding: 50px 20px;*/
     /*border-radius: 8px;*/
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /*padding: 0 15px;*/
+    padding: 80px;
     /*margin-top: 50px;*/
     /*margin-bottom: 10px;*/
-    margin: 0 15px 10px; /*top = 0; left/right = 15; bottom = 10*/
+    margin: 15px 15px 10px; /*top left/right bottom*/
 }
 
 /*.header_items {
