--- a/styles.css
+++ b/styles.css
@@ -449,7 +449,7 @@
     /*border-radius: 8px;*/
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 80px;
+    padding: 40px;
     /*margin-top: 50px;*/
     /*margin-bottom: 10px;*/
     margin: 15px 15px 10px; /*top left/right bottom*/
@@ -517,8 +517,8 @@
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
     padding: 30px;
-    /*margin-top: 20px;*/
-    margin-bottom: 10px;
+    /*margin-top: 20px;
+    margin-bottom: 10px;*/
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;
@@ -549,8 +549,8 @@
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
     padding: 30px;
-    /*margin-top: 20px;*/
-    margin-bottom: 10px;
+    /*margin-top: 20px;
+    margin-bottom: 10px;*/
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;
