--- a/styles.css
+++ b/styles.css
@@ -449,10 +449,10 @@
     /*border-radius: 8px;*/
     /*box-shadow: 0 0 4px 8px rgba(10, 16, 59, 0.1);*/
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 40px;
+    padding: 30px;
     /*margin-top: 50px;*/
     /*margin-bottom: 10px;*/
-    margin: 15px 15px 10px; /*top left/right bottom*/
+    margin: 15px 15px 15px; /*top left/right bottom*/
 }
 
 /*.header_items {
@@ -492,7 +492,7 @@
     /*max-width: 900px;*/
     /*width: 100%;*/
     /*margin: 40px auto;*/
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     margin-bottom: 15px;
     padding: 0 15px;
 }
