--- a/styles.css
+++ b/styles.css
@@ -584,22 +584,21 @@
     top: 0;
 }
 
-.menu_learn_more {
-    color: white;
-    font-size: 1em;
-    font-family: 'Helvetica';
+.category_button {
+    color: black;
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    /*background-color: rgba(10, 16, 59, 0.95);*/
-    /*border-radius: 20px;
-    border: 1px solid rgb(0, 43, 200);*/
+    background-color: white;
+    /*background-color: white;*/
+    border-radius: 20px;
+    /*border: 2px solid rgb(0, 43, 200);*/
 }
 
-.menu_learn_more:hover {
-    color: #0a103b;
+.category_button:hover {
+    color: white;
     text-decoration: none;
-    background-color: white;
+    background-color: black;
 }
 
 .projects_page footer {
