--- a/styles.css
+++ b/styles.css
@@ -585,7 +585,7 @@
 }
 
 .category_button {
-    color: black;
+    color: rgb(0, 43, 200);
     font-family: 'Helvetica';
     text-decoration: none;
     display: inline-block;
@@ -593,14 +593,14 @@
     background-color: white;
     /*background-color: white;*/
     border-radius: 20px;
-    /*border: 2px solid rgb(0, 43, 200);*/
+    border: 2px solid transparent; /* Prevents layout shift */
 }
 
 .category_button:hover {
-    color: black;
+    color: rgb(0, 43, 200);
     text-decoration: none;
-    border: 2px rgb(0, 43, 200);
-    /*background-color: rgb(0, 43, 200);*/
+    border: 2px solid rgb(0, 43, 200);
+    background-color: white;
 }
 
 .category_button.clicked {
