--- a/styles.css
+++ b/styles.css
@@ -509,7 +509,8 @@
 .left_box {
     /*display: flex;*/
     width: 30%;
-    background-color: white;
+    /*background-color: white;*/
+    background: #d9f1ff;   
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
@@ -528,10 +529,11 @@
 }
 
 .left_box h2 {
-    font-size: 2.5em;
+    font-size: 2em;
     text-align: center;
     font-family: 'Poppins-Regular';
-    color: rgb(211, 211, 280);
+    /*color: rgb(211, 211, 280);*/
+    color: #333;
     /*padding: 0;*/
     /*margin-top: 15px;*/
     /*margin-bottom: 10px;*/
@@ -540,7 +542,7 @@
 
 .categories {
     list-style-type: none; /* no bullets */
-    margin-top: 45px;
+    margin-top: 30px;
 }
 
 .categories li {
