--- a/styles.css
+++ b/styles.css
@@ -510,7 +510,7 @@
     /*display: flex;*/
     width: 30%;
     /*background-color: white;*/
-    background: #d9f1ff;   
+    background: rgb(211, 211, 211);   
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
@@ -582,27 +582,27 @@
 }
 
 .category_button {
-    color: rgb(0, 43, 200);
+    color: black; /* font color */
     font-family: 'Helvetica';
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: #d9f1ff;
+    background-color: rgb(211, 211, 211);
     /*background-color: white;*/
     border-radius: 25px;
     border: 2px solid transparent; /* Prevents layout shift */
 }
 
 .category_button:hover {
-    color: rgb(0, 43, 200);
+    color: black; /* font color */
     text-decoration: none;
-    border: 2px solid rgb(0, 43, 200);
-    background-color: white;
+    border: 1px solid black;
+    background-color: rgb(211, 211, 211);
 }
 
 .category_button.clicked {
-    color: white;
-    background-color: rgb(0, 43, 200);
+    color: white; /* font color */
+    background-color: black;
 }
 
 .projects_page footer {
