--- a/styles.css
+++ b/styles.css
@@ -536,7 +536,7 @@
     color: #333;
     /*padding: 0;*/
     /*margin-top: 15px;*/
-    /*margin-bottom: 10px;*/
+    margin-bottom: 10px;
     line-height: 0.2;
 }
 
