--- a/styles.css
+++ b/styles.css
@@ -535,7 +535,7 @@
     /*color: rgb(211, 211, 280);*/
     color: #333;
     /*padding: 0;*/
-    /*margin-top: 15px;*/
+    margin-top: 5px;
     margin-bottom: 25px;
     line-height: 0.2;
 }
