--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@
 }
 
 .main_page header {
-    /*width: 100%;*/
+    width: 100%;
     display: flex;
     /*gap: 50px;*/
     justify-content: center;
@@ -433,7 +433,7 @@
 }
 
 .projects_page header {
-    /*width: 100%;*/
+    width: 100%;
     display: flex;
     /*gap: 50px;*/
     justify-content: center;
@@ -452,7 +452,8 @@
     padding: 30px;
     /*margin-top: 50px;*/
     /*margin-bottom: 10px;*/
-    margin: 15px 15px 15px; /*top left/right bottom*/
+    /*margin: 15px 15px 15px;*/ /*top left/right bottom*/
+    margin: 0 0 15px;
 }
 
 /*.header_items {
