--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /*padding: 0 15px;*/
     /*margin-top: 50px;*/
-    margin-bottom: 10px;
-    margin: 0 15px;
+    /*margin-bottom: 10px;
+    margin: 0 15px;*/
+    margin: 0 0 10px;
 }
 
 /*.header_items {
