--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@
     /*margin-top: 50px;*/
     /*margin-bottom: 10px;
     margin: 0 15px;*/
-    margin: 0 0 10px;
+    margin: 0; /* top right/left bottom */
 }
 
 /*.header_items {
@@ -155,9 +155,9 @@
     /*max-width: 900px;*/
     /*width: 100%;*/
     /*margin: 40px auto;*/
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     margin-bottom: 15px;
-    padding: 0 15px;
+    /*padding: 0 15px;*/
 }
 
 .display1 {
@@ -411,9 +411,10 @@
     color: white;
     line-height: 1;
     border-radius: 12px;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;
     margin-left: 15px;
-    margin-right: 15px;
+    margin-right: 15px;*/
+    margin: 0;
 }
 
 .main_page footer p {
