--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
     color: #333;
     /*line-height: 1.6;*/
     /*padding: 0 15px;*/ /*comment this to remove white side box borders*/
-    padding-top: 48px;
+    padding-top: 45px;
 }
 
 .display2 {
@@ -68,7 +68,7 @@
     font-family: 'Helvetica';
     text-decoration: none;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 10px 20px; /* t/p l/r */
     /*background-color: rgba(10, 16, 59, 0.95);*/
     /*border-radius: 20px;
     border: 1px solid rgb(0, 43, 200);*/
@@ -163,6 +163,8 @@
 .display1 {
     display: flex;
     gap: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .main_page section {
@@ -188,7 +190,7 @@
     /*padding: 20px;*/
     /*margin-top: 20px;*/
     margin-bottom: 15px;
-    border-radius: 12px;
+    /*border-radius: 12px;*/
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
     /*justify-content: center;*/
@@ -410,7 +412,7 @@
     background-color: #333;
     color: white;
     line-height: 1;
-    border-radius: 12px;
+    /*border-radius: 12px;*/
     /*margin-bottom: 10px;
     margin-left: 15px;
     margin-right: 15px;*/
