--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
     color: #333;
     /*line-height: 1.6;*/
     /*padding: 0 15px;*/ /*comment this to remove white side box borders*/
-    padding-top: 39px;
+    padding-top: 38px;
 }
 
 .display2 {
@@ -146,7 +146,7 @@
 
 .header_text p {
     text-align: center;
-    font-family: 'Poppins-LightItalic';
+    font-family: 'Poppins-Regular';
     /*font-weight: 400;*/
     /*font-style: italic;*/
     font-size: 1.3em;
@@ -261,6 +261,66 @@
     padding: 0 40px 20px 40px;
 }
 
+.projects {
+    /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
+    /*background: rgb(235, 235, 235);*/
+    background: #d9f1ff;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.projects h1 {
+    font-size: 4em;
+    text-align: center;
+    font-family: 'Poppins-Regular';
+    color: #333; /*rgb(54, 69, 79);*/
+    margin-top: 3px;
+    margin-bottom: 30px;
+}
+
+.projects ul {
+    list-style-type: none;
+    margin-bottom: 20px;
+}
+
+.projects ul li {
+    font-size: 1em;
+    font-family: 'Helvetica';
+    /*color: black;
+    font-style: bold;*/
+    text-align: center;
+}
+
+.github {
+    /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
+    /*background: rgb(235, 235, 235);*/
+    background: #d9f1ff;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.github h1 {
+    font-size: 4em;
+    text-align: center;
+    font-family: 'Poppins-Regular';
+    color: #333; /*rgb(54, 69, 79);*/
+    margin-top: 3px;
+    margin-bottom: 30px;
+}
+
+.github ul {
+    list-style-type: none;
+    margin-bottom: 20px;
+}
+
+.github ul li {
+    font-size: 1em;
+    font-family: 'Helvetica';
+    /*color: black;
+    font-style: bold;*/
+    text-align: center;
+}
+
 .blog {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: rgb(235, 235, 235);*/
@@ -295,42 +355,6 @@
     text-align: center;
 }
 
-.blog a {
-    /*font-size: 1.2em;*/
-    /*font-family: 'Helvetica';*/
-    /*color: white;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: rgb(0, 86, 240);*/
-    /*font-weight: bold;*/ /*doesn't work here*/
-    /*border-radius: 20px;*/
-    /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);*/
-    /*transition: background-color 0.3s ease;*/
-}
-/*
-.blog a:hover {
-    text-decoration: none;
-    background-color: rgb(0, 43, 200);
-}
-*/
-.learn_more {
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: rgb(0, 86, 255);
-    /*background-color: white;*/
-    border-radius: 20px;
-    /*border: 2px solid rgb(0, 43, 200);*/
-}
-
-.learn_more:hover {
-    color: white;
-    text-decoration: none;
-    background-color: rgb(0, 43, 200);
-}
-
 .linkedin {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: rgb(235, 235, 235);*/
@@ -360,53 +384,22 @@
     text-align: center;
 }
 
-/*.linkedin a {
-    color: blue;
+.learn_more {
+    color: white;
     text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: rgb(0, 86, 255);
+    /*background-color: white;*/
+    border-radius: 20px;
+    /*border: 2px solid rgb(0, 43, 200);*/
 }
 
-.linkedin a:hover {
-    text-decoration: underline;
-}*/
-
-.projects {
-    /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
-    /*background: rgb(235, 235, 235);*/
-    background: #d9f1ff;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.projects h1 {
-    font-size: 4em;
-    text-align: center;
-    font-family: 'Poppins-Regular';
-    color: #333; /*rgb(54, 69, 79);*/
-    margin-top: 3px;
-    margin-bottom: 30px;
-}
-
-.projects ul {
-    list-style-type: none;
-    margin-bottom: 20px;
-}
-
-.projects ul li {
-    font-size: 1em;
-    font-family: 'Helvetica';
-    /*color: black;
-    font-style: bold;*/
-    text-align: center;
-}
-
-/*.projects a {
-    color: blue;
+.learn_more:hover {
+    color: white;
     text-decoration: none;
+    background-color: rgb(0, 43, 200);
 }
-
-.projects a:hover {
-    text-decoration: underline;
-}*/
 
 /* Footer Styles */
 .main_page footer {
