--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@
 }
 
 .about_me p {
-    font-size: 0.9em;
+    font-size: 1em;
     font-family: 'Helvetica';
     color: white;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
@@ -482,7 +482,7 @@
 
 .header_text p {
     text-align: center;
-    font-family: 'Poppins-LightItalic';
+    font-family: 'Poppins-Regular';
     /*font-weight: 400;*/
     /*font-style: italic;*/
     font-size: 1.3em;
@@ -612,10 +612,11 @@
     background-color: #333;
     color: white;
     line-height: 1;
-    border-radius: 12px;
+    /*border-radius: 12px;
     margin-bottom: 10px;
     margin-left: 15px;
-    margin-right: 15px;
+    margin-right: 15px;*/
+    margin: 0;
 }
 
 .projects_page footer p {
