--- a/styles.css
+++ b/styles.css
@@ -582,6 +582,12 @@
     line-height: 0.2;
 }
 
+.right_box p {
+    font-size: 1em;
+    font-family: 'Helvetica';
+    color: white;
+}
+
 .category_button {
     color: black; /* font color */
     font-family: 'Helvetica';
