--- a/styles.css
+++ b/styles.css
@@ -609,7 +609,8 @@
 .right_box p {
     font-size: 1em;
     font-family: 'Helvetica';
-    color: white;
+    color: black;
+    margin-top: 25px;
 }
 
 .projects_page footer {
@@ -629,4 +630,33 @@
     font-size: 0.8em;
     font-family: 'Helvetica';
     font-style: bold;
+}
+
+.project_aircraft {
+    /*font-family: 'Helvetica';*/
+    background-color: white;
+    color: #333;
+    /*line-height: 1.6;*/
+    /*padding: 0 15px;*/ /*comment this to remove white side box borders*/
+    /*padding-top: 30px;
+    margin-top: 15px;*/
+}
+
+/********************************************************************* AIRCRAFT PAGE *********************************************************************/
+.project_aircraft h2 {
+    font-size: 2.5em;
+    text-align: center;
+    font-family: 'Poppins-Regular';
+    color: rgb(211, 211, 280);
+    /*padding: 0;*/
+    /*margin-top: 15px;*/
+    /*margin-bottom: 10px;*/
+    line-height: 0.2;
+}
+
+.project_aircraft p {
+    font-size: 1em;
+    font-family: 'Helvetica';
+    color: black;
+    margin-top: 25px;
 }
