--- a/styles.css
+++ b/styles.css
@@ -654,7 +654,7 @@
     margin-top: 25px;
 }
 */
-
+/*
 .accordion-item {
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -662,10 +662,19 @@
   background-color: #f9f9f9;
   overflow: hidden;
 }
+*/
+.accordion-item {
+  border: 1px solid #e9e9e9;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  background-color: #e9e9e9;
+  overflow: hidden;
+}
 
 .accordion-header {
   padding: 12px 16px;
   cursor: pointer;
+  font-family: 'Helvetica';
   font-weight: bold;
   background-color: #e9e9e9;
   display: flex;
@@ -674,7 +683,19 @@
 }
 
 .accordion-header:hover {
-  background-color: #ddd;
+  /*background-color: #ddd;*/
+  background-color: #e9e9e9;
+  color: black; /* font color */
+  font-family: 'Helvetica';
+  text-decoration: none;
+  border: 1px solid black;
+  background-color: rgb(220, 220, 220);    
+}
+
+.accordion-item.active .accordion-header {
+  color: white; /* font color */
+  font-family: 'Helvetica';
+  background-color: black;
 }
 
 .accordion-header .arrow {
