--- a/styles.css
+++ b/styles.css
@@ -511,7 +511,8 @@
     /*display: flex;*/
     width: 25%;
     /*background-color: white;*/
-    background: rgb(220, 220, 220);   
+    /*background: rgb(220, 220, 220);*/
+    background: #e9e9e9;
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
@@ -559,7 +560,7 @@
     background-color: rgb(220, 220, 220);
     /*background-color: white;*/
     border-radius: 25px;
-    border: 1px solid transparent; /* Prevents layout shift */
+    border: 1px solid transparent; /* prevents layout shift */
 }
 
 .category_button:hover {
@@ -680,6 +681,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid transparent; /* prevents layout shift */
 }
 
 .accordion-header:hover {
