--- a/styles.css
+++ b/styles.css
@@ -557,7 +557,8 @@
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: rgb(220, 220, 220);
+    /*background-color: rgb(220, 220, 220);*/
+    background: #e9e9e9;
     /*background-color: white;*/
     border-radius: 25px;
     border: 1px solid transparent; /* prevents layout shift */
@@ -567,7 +568,8 @@
     color: black; /* font color */
     text-decoration: none;
     border: 1px solid black;
-    background-color: rgb(220, 220, 220);
+    /*background-color: rgb(220, 220, 220);*/
+    background: #e9e9e9;
 }
 
 .category_button.clicked {
@@ -666,7 +668,7 @@
 */
 .accordion-item {
   border: 1px solid #e9e9e9;
-  border-radius: 4px;
+  border-radius: 5px;
   margin-bottom: 10px;
   background-color: #e9e9e9;
   overflow: hidden;
