--- a/styles.css
+++ b/styles.css
@@ -668,7 +668,7 @@
 */
 .accordion-item {
   border: 1px solid #e9e9e9;
-  border-radius: 5px;
+  border-radius: 8px;
   margin-bottom: 10px;
   background-color: #e9e9e9;
   overflow: hidden;
@@ -714,11 +714,13 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease, padding 0.3s ease;
-  padding: 0 16px;
+  padding: 0 15px;
   background-color: #ffffff;
+  font-family: 'Helvetica';
 }
 
 .accordion-item.active .accordion-content {
-  padding: 12px 16px;
+  padding: 15px 15px;
   max-height: 1000px; /* adjust based on expected content size */
+  font-family: 'Helvetica';
 }
