--- a/styles.css
+++ b/styles.css
@@ -667,8 +667,8 @@
 }
 */
 .accordion-item {
-  border: 1px solid #e9e9e9;
-  border-radius: 8px;
+  /*border: 1px solid #e9e9e9;*/
+  border-radius: 5px;
   margin-bottom: 10px;
   background-color: #e9e9e9;
   overflow: hidden;
