--- a/styles.css
+++ b/styles.css
@@ -686,7 +686,7 @@
   border: 1px solid transparent; /* prevents layout shift */
 }
 
-.accordion-header:hover {
+.accordion-item:hover {
   /*background-color: #ddd;*/
   background-color: #e9e9e9;
   color: black; /* font color */
@@ -723,4 +723,5 @@
   padding: 15px 15px;
   max-height: 1000px; /* adjust based on expected content size */
   font-family: 'Helvetica';
+  border: 1px solid black;
 }
