--- a/styles.css
+++ b/styles.css
@@ -668,21 +668,10 @@
 */
 .accordion-item {
   /*border: 1px solid #e9e9e9;*/
-  border-radius: 5px;
+  border-radius: 8px;
   margin-bottom: 10px;
   background-color: #e9e9e9;
   overflow: hidden;
-}
-
-.accordion-header {
-  padding: 12px 16px;
-  cursor: pointer;
-  font-family: 'Helvetica';
-  font-weight: bold;
-  background-color: #e9e9e9;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border: 1px solid transparent; /* prevents layout shift */
 }
 
@@ -694,6 +683,17 @@
   text-decoration: none;
   border: 1px solid black;
   /*background-color: rgb(220, 220, 220);*/    
+}
+
+.accordion-header {
+  padding: 12px 16px;
+  cursor: pointer;
+  font-family: 'Helvetica';
+  font-weight: bold;
+  background-color: #e9e9e9;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .accordion-item.active .accordion-header {
@@ -721,7 +721,7 @@
 
 .accordion-item.active .accordion-content {
   padding: 15px 15px;
-  max-height: 1000px; /* adjust based on expected content size */
+  /*max-height: 1000px;*/ /* adjust based on expected content size */
   font-family: 'Helvetica';
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
