--- a/styles.css
+++ b/styles.css
@@ -672,7 +672,7 @@
   margin-bottom: 10px;
   background-color: #e9e9e9;
   overflow: hidden;
-  border: 1px solid transparent; /* prevents layout shift */
+  /*border: 1px solid transparent;*/ /* prevents layout shift */
 }
 
 .accordion-item:hover {
@@ -681,12 +681,13 @@
   color: black; /* font color */
   font-family: 'Helvetica';
   text-decoration: none;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   /*background-color: rgb(220, 220, 220);*/    
 }
 
 .accordion-header {
   padding: 12px 16px;
+  border-radius: 8px;
   cursor: pointer;
   font-family: 'Helvetica';
   font-weight: bold;
@@ -694,12 +695,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid transparent; /* prevents layout shift */
 }
 
 .accordion-item.active .accordion-header {
   color: white; /* font color */
   font-family: 'Helvetica';
   background-color: black;
+  border: 1px solid black;
 }
 
 .accordion-header .arrow {
@@ -717,12 +720,12 @@
   padding: 0 15px;
   background-color: #ffffff;
   font-family: 'Helvetica';
-  border: 1px solid transparent;
+  /*border: 1px solid transparent;*/
 }
 
 .accordion-item.active .accordion-content {
   padding: 15px 15px;
-  max-height: 500px; /* adjust based on expected content size */
+  max-height: 200px; /* adjust based on expected content size */
   font-family: 'Helvetica';
-  border: 1px solid white;
+  /*border: 1px solid white;*/
 }
