--- a/styles.css
+++ b/styles.css
@@ -590,8 +590,8 @@
     padding: 30px;
     /*margin-top: 20px;
     margin-bottom: 10px;*/
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /*border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
     /*align-items: center;
     justify-content: center;
     height: 100vh;*/
