--- a/styles.css
+++ b/styles.css
@@ -477,7 +477,7 @@
     font-size: 4em;
     font-family: 'Lato-Regular';
     /*font-weight: 500;*/
-    /*margin-top: 10px;*/
+    margin-bottom: 10px;
 }
 
 .header_text p {
@@ -487,6 +487,7 @@
     /*font-style: italic;*/
     font-size: 1.3em;
     /*padding: 20px;*/
+    margin-bottom: 15px;
 }
 
 .projects_page main {
@@ -587,7 +588,7 @@
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);*/
     /*opacity: 0.95;*/
-    padding: 30px;
+    padding: 10px;
     /*margin-top: 20px;
     margin-bottom: 10px;*/
     /*border-radius: 12px;
