--- a/styles.css
+++ b/styles.css
@@ -476,8 +476,8 @@
     text-align: center;
     font-size: 4em;
     font-family: 'Lato-Regular';
-    /*font-weight: 500;*/
-    margin-bottom: 10px;
+    /*font-weight: 500;
+    margin-bottom: 10px;*/
 }
 
 .header_text p {
@@ -487,7 +487,7 @@
     /*font-style: italic;*/
     font-size: 1.3em;
     /*padding: 20px;*/
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
 }
 
 .projects_page main {
@@ -606,7 +606,7 @@
     color: rgb(211, 211, 280);
     /*padding: 0;*/
     /*margin-top: 15px;*/
-    /*margin-bottom: 10px;*/
+    margin-bottom: 10px;
     line-height: 0.2;
 }
 
@@ -615,6 +615,7 @@
     font-family: 'Helvetica';
     color: black;
     margin-top: 25px;
+    margin-bottom: 15px;
 }
 
 .projects_page footer {
