--- a/styles.css
+++ b/styles.css
@@ -529,7 +529,7 @@
     justify-content: center;
     height: 100vh;*/
     text-align: center;
-    height: 335px;
+    height: 340px;
     overflow: visible;
 }
 
@@ -677,7 +677,8 @@
   border-radius: 8px;
   margin-bottom: 10px;
   background-color: #e9e9e9;
-  overflow: hidden;
+  height: auto;
+  overflow: visible;
   /*border: 1px solid transparent;*/ /* prevents layout shift */
 }
 
