--- a/styles.css
+++ b/styles.css
@@ -758,14 +758,23 @@
   transition: max-height 0.3s ease, padding 0.3s ease;
   padding: 0 15px;
   background-color: #ffffff;
+  text-align: left;
+  line-height: 1.5px;
   /*border: 1px solid transparent;*/
 }
 
-.accordion-content p {
+.accordion_content_description {
   font-family: 'Helvetica';
   color: black; /* font color */
   font-size: 1em;
   /*margin-top: 0;*/
+}
+
+.accordion_content_title {
+  font-family: 'Helvetica';
+  color: black; /* font color */
+  font-size: 1em;
+  font-weight: bold;
 }
 
 .accordion-item.active .accordion-content {
@@ -774,10 +783,10 @@
   height: auto;
   overflow: visible;
   /*border: 1px solid black;*/ /* uncomment to see padding and margin effects */
-  margin-bottom: 19px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
+  margin-bottom: 50px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
 }
 
-.accordion-item.active .accordion-content p {
+.accordion-item.active .accordion_content_description {
   font-family: 'Helvetica';
   color: black; /* font color */
   font-size: 1em;
